ords-ssl-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ords-nondev-sidb23c
  namespace: sidb23c
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: ords-nondev-sidb23c
      app.kubernetes.io/name: ords-nondev
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ords-nondev-sidb23c
        app.kubernetes.io/name: ords-nondev
    spec:
      containers:
      - image: container-registry.oracle.com/database/ords:latest
        imagePullPolicy: IfNotPresent
        name: app
        ports:
        - containerPort: 8080
          name: http-ords
          protocol: TCP
        - containerPort: 8443
          name: https-ords
          protocol: TCP
        volumeMounts:
        - mountPath: /etc/ords/config
          name: config
        - mountPath: /ssl
          name: ssl
      volumes:
      - name: scripts
        configMap:
          defaultMode: 420
          name: ords-init-config
      - name: config
        emptyDir: {}
      - name: ssl
        secret:
          defaultMode: 420
          secretName: ords-ssl
