ords-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ords-nondev
  namespace: sidb23c
spec:
  ports:
  - name: http-ords
    port: 8888
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: ords-nondev
    app.kubernetes.io/name: ords-nondev
  sessionAffinity: None
  type: ClusterIP
